change： 新增日志支撑 新增限制时间相关支撑

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
   "require": {
     "php": ">=7.2",
     "ext-pdo": "*",
-    "catfan/medoo": "~1.7"
+    "catfan/medoo": "~1.7",
+    "psr/log": "^1.0"
   },
   "autoload": {
     "psr-4": {
