--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
   "type": "library",
   "keywords": [
     "casual",
-    "database"
+    "MySQL",
+    "pgSQL",
+    "ODBC"
   ],
   "license": "MIT",
   "description": "一个漫不经心的适合常驻内存PHP程序的数据库驱动组件.",
@@ -21,8 +23,17 @@
   "require": {
     "php": ">=7.2",
     "ext-pdo": "*",
-    "catfan/medoo": "~1.7",
+    "ext-json": "*",
     "psr/log": "^1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.0"
+  },
+  "suggest": {
+    "ext-pdo_mysql": "For MySQL or MariaDB database",
+    "ext-pdo_odbc": "For ODBC dirver",
+    "ext-pdo_pqsql": "For PostgreSQL database",
+    "ext-pdo_sqlite": "For SQLite database"
   },
   "autoload": {
     "psr-4": {
@@ -31,7 +42,10 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Database\\Test\\": "test/"
+      "Database\\Tests\\": "tests/"
     }
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit tests"
   }
 }
